fixed img spillover

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ main {
 
 header {
   background-color: whitesmoke; 
+  border-bottom: 400px;
+  border-color: black;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -52,16 +54,19 @@ h1 {
   color: rgba(84, 162, 85, 0.749);
   line-height: 10
   rem;
+  
   margin: 3rem 0 1rem;
  
 }
 
 #ducklogo {
   width: 200px;
-	height: 250px;
+	height: 220px;
 	border-radius: 50%;
   margin-left: 50px;
-  
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 5px;
 }
 
 section {
@@ -77,7 +82,7 @@ section {
 }
 
 section img {
-  width: 460px;
+  width: 30%;
   max-height: 26rem;
   border: 5px solid transparent;
 }
